--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,7 +10,6 @@ on:
 
 env:
   AWS_REGION: ${{ secrets.AWS_REGION }}
-  # This now refers to your Docker Hub repository name
   DOCKER_REPO: devsecops-app
   EKS_CLUSTER_NAME: ${{ secrets.EKS_CLUSTER_NAME }}
 
@@ -22,8 +21,9 @@ jobs:
     steps:
       - name: Checkout Code
         uses: actions/checkout@v3
+
       - name: Run tfsec
-        uses: aquasecurity/tfsec-action@v1.0.2
+        uses: aquasecurity/tfsec-action@v1 # Using robust major version tag
         with:
           working_directory: infra
           soft_fail: true
@@ -40,14 +40,12 @@ jobs:
       - name: Checkout Code
         uses: actions/checkout@v3
 
-      # THIS STEP IS NEW: Login to Docker Hub
       - name: Login to Docker Hub
         uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-      # THIS STEP IS UPDATED: Build and push to Docker Hub
       - name: Build and push Docker image
         id: build-image
         env:
@@ -68,7 +66,7 @@ jobs:
           vuln-type: 'os,library'
           severity: 'CRITICAL'
 
-  # Job 3: Deploy to EKS (Updated sed command)
+  # Job 3: Deploy to EKS
   deploy-to-eks:
     name: Deploy to EKS
     runs-on: ubuntu-latest
@@ -87,16 +85,16 @@ jobs:
 
       - name: Configure kubectl for EKS
         run: aws eks update-kubeconfig --name ${{ env.EKS_CLUSTER_NAME }} --region ${{ env.AWS_REGION }}
-      
-                - name: Deploy to Kubernetes
-            run: |
-              kubectl apply -f k8s/sealed-secret.yaml
-              
-              # --- THIS IS THE CRITICAL FIX ---
-              # We store the image URI in an environment variable first, which is a more robust way to handle it.
-              export IMAGE_URI="${{ needs.build-and-push-image.outputs.image_uri }}"
-              
-              # We use double quotes to ensure the shell expands the IMAGE_URI variable correctly.
-              sed -i "s|prerna307/devsecops-app:latest|$IMAGE_URI|" k8s/deployment.yaml
-              
-              kubectl apply -f k8s/deployment.yaml
+
+      # THIS IS THE CORRECTLY FORMATTED FINAL STEP
+      - name: Deploy to Kubernetes
+        run: |
+          kubectl apply -f k8s/sealed-secret.yaml
+          
+          # Store the image URI in an environment variable for robustness
+          export IMAGE_URI="${{ needs.build-and-push-image.outputs.image_uri }}"
+          
+          # Use double quotes to ensure the shell expands the IMAGE_URI variable correctly
+          sed -i "s|prerna307/devsecops-app:latest|$IMAGE_URI|" k8s/deployment.yaml
+          
+          kubectl apply -f k8s/deployment.yaml
