--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,7 +23,7 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Run tfsec
-        uses: aquasecurity/tfsec-action@v1.0.2 # Using robust major version tag
+        uses: aquasecurity/tfsec-action@v1
         with:
           working_directory: infra
           soft_fail: true
@@ -56,17 +56,17 @@ jobs:
           docker push $IMAGE_NAME:$IMAGE_TAG
           echo "image=$IMAGE_NAME:$IMAGE_TAG" >> $GITHUB_OUTPUT
 
-      - name: Scan Docker image with Trivy
-        uses: aquasecurity/trivy-action@master
-        with:
-          image-ref: ${{ steps.build-image.outputs.image }}
-          format: 'table'
-          exit-code: '1'
-          ignore-unfixed: true
-          vuln-type: 'os,library'
-          severity: 'CRITICAL'
+  - name: Scan Docker image with Trivy
+    uses: aquasecurity/trivy-action@master
+    with:
+      image-ref: ${{ steps.build-image.outputs.image }}
+      format: 'table'
+      exit-code: '1'
+      ignore-unfixed: true
+      vuln-type: 'os,library'
+      severity: 'CRITICAL'
 
-  # Job 3: Deploy to EKS
+  # Job 3: Deploy to EKS with Debugging
   deploy-to-eks:
     name: Deploy to EKS
     runs-on: ubuntu-latest
@@ -86,15 +86,33 @@ jobs:
       - name: Configure kubectl for EKS
         run: aws eks update-kubeconfig --name ${{ env.EKS_CLUSTER_NAME }} --region ${{ env.AWS_REGION }}
 
-      # THIS IS THE CORRECTLY FORMATTED FINAL STEP
-      - name: Deploy to Kubernetes
+      # --- THIS IS THE CRITICAL DEBUGGING STEP ---
+      - name: Debug and Deploy to Kubernetes
         run: |
+          # Step 1: Print the variable to see if it's empty
+          echo "--- DEBUG: The image URI from the build job is: ---"
+          echo "${{ needs.build-and-push-image.outputs.image_uri }}"
+          echo "--- END DEBUG ---"
+
+          # Step 2: Print the deployment file BEFORE we change it
+          echo "--- DEBUG: Deployment file BEFORE replacement ---"
+          cat k8s/deployment.yaml
+          echo "--- END DEBUG ---"
+          
+          # Apply the secret first
           kubectl apply -f k8s/sealed-secret.yaml
           
-          # Store the image URI in an environment variable for robustness
+          # Store the image URI in an environment variable
           export IMAGE_URI="${{ needs.build-and-push-image.outputs.image_uri }}"
           
-          # Use double quotes to ensure the shell expands the IMAGE_URI variable correctly
+          # Run the replacement command
           sed -i "s|prerna307/devsecops-app:latest|$IMAGE_URI|" k8s/deployment.yaml
           
+          # Step 3: Print the deployment file AFTER we change it
+          echo "--- DEBUG: Deployment file AFTER replacement ---"
+          cat k8s/deployment.yaml
+          echo "--- END DEBUG ---"
+          
+          # Step 4: Apply the final deployment file
+          echo "--- Applying final deployment manifest ---"
           kubectl apply -f k8s/deployment.yaml
