--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -46,27 +46,27 @@ jobs:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
+      # --- THIS IS THE CRITICAL FIX ---
+      # This version is more robust and less prone to shell errors.
       - name: Build and push Docker image
         id: build-image
-        env:
-          IMAGE_TAG: ${{ github.sha }}
         run: |
-          IMAGE_NAME=${{ secrets.DOCKERHUB_USERNAME }}/${{ env.DOCKER_REPO }}
-          docker build -t $IMAGE_NAME:$IMAGE_TAG .
-          docker push $IMAGE_NAME:$IMAGE_TAG
-          echo "image=$IMAGE_NAME:$IMAGE_TAG" >> $GITHUB_OUTPUT
+          IMAGE_TAG=${{ github.sha }}
+          docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/${{ env.DOCKER_REPO }}:$IMAGE_TAG .
+          docker push ${{ secrets.DOCKERHUB_USERNAME }}/${{ env.DOCKER_REPO }}:$IMAGE_TAG
+          echo "image=${{ secrets.DOCKERHUB_USERNAME }}/${{ env.DOCKER_REPO }}:$IMAGE_TAG" >> $GITHUB_OUTPUT
 
-      - name: Scan Docker image with Trivy
-        uses: aquasecurity/trivy-action@master
-        with:
-          image-ref: ${{ steps.build-image.outputs.image }}
-          format: 'table'
-          exit-code: '1'
-          ignore-unfixed: true
-          vuln-type: 'os,library'
-          severity: 'CRITICAL'
+  - name: Scan Docker image with Trivy
+    uses: aquasecurity/trivy-action@master
+    with:
+      image-ref: ${{ steps.build-image.outputs.image }}
+      format: 'table'
+      exit-code: '1'
+      ignore-unfixed: true
+      vuln-type: 'os,library'
+      severity: 'CRITICAL'
 
-  # Job 3: Deploy to EKS with Debugging
+  # Job 3: Deploy to EKS
   deploy-to-eks:
     name: Deploy to EKS
     runs-on: ubuntu-latest
@@ -86,33 +86,12 @@ jobs:
       - name: Configure kubectl for EKS
         run: aws eks update-kubeconfig --name ${{ env.EKS_CLUSTER_NAME }} --region ${{ env.AWS_REGION }}
 
-      # --- THIS IS THE CRITICAL DEBUGGING STEP ---
-      - name: Debug and Deploy to Kubernetes
-        run: |
-          # Step 1: Print the variable to see if it's empty
-          echo "--- DEBUG: The image URI from the build job is: ---"
-          echo "${{ needs.build-and-push-image.outputs.image_uri }}"
-          echo "--- END DEBUG ---"
-
-          # Step 2: Print the deployment file BEFORE we change it
-          echo "--- DEBUG: Deployment file BEFORE replacement ---"
-          cat k8s/deployment.yaml
-          echo "--- END DEBUG ---"
-          
-          # Apply the secret first
-          kubectl apply -f k8s/sealed-secret.yaml
-          
-          # Store the image URI in an environment variable
-          export IMAGE_URI="${{ needs.build-and-push-image.outputs.image_uri }}"
-          
-          # Run the replacement command
-          sed -i "s|prerna307/devsecops-app:latest|$IMAGE_URI|" k8s/deployment.yaml
-          
-          # Step 3: Print the deployment file AFTER we change it
-          echo "--- DEBUG: Deployment file AFTER replacement ---"
-          cat k8s/deployment.yaml
-          echo "--- END DEBUG ---"
-          
-          # Step 4: Apply the final deployment file
-          echo "--- Applying final deployment manifest ---"
-          kubectl apply -f k8s/deployment.yaml
+  - name: Deploy to Kubernetes
+    run: |
+      # The debug steps are no longer needed
+      kubectl apply -f k8s/sealed-secret.yaml
+      
+      export IMAGE_URI="${{ needs.build-and-push-image.outputs.image_uri }}"
+      sed -i "s|prerna307/devsecops-app:latest|$IMAGE_URI|" k8s/deployment.yaml
+      
+      kubectl apply -f k8s/deployment.yaml
