--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,7 +23,7 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Run tfsec
-        uses: aquasecurity/tfsec-action@v1.0.2
+        uses: aquasecurity/tfsec-action@v1
         with:
           working_directory: infra
           soft_fail: true
@@ -46,8 +46,6 @@ jobs:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-      # --- THIS IS THE CRITICAL FIX ---
-      # This version is more robust and less prone to shell errors.
       - name: Build and push Docker image
         id: build-image
         run: |
@@ -56,15 +54,16 @@ jobs:
           docker push ${{ secrets.DOCKERHUB_USERNAME }}/${{ env.DOCKER_REPO }}:$IMAGE_TAG
           echo "image=${{ secrets.DOCKERHUB_USERNAME }}/${{ env.DOCKER_REPO }}:$IMAGE_TAG" >> $GITHUB_OUTPUT
 
-  - name: Scan Docker image with Trivy
-    uses: aquasecurity/trivy-action@master
-    with:
-      image-ref: ${{ steps.build-image.outputs.image }}
-      format: 'table'
-      exit-code: '1'
-      ignore-unfixed: true
-      vuln-type: 'os,library'
-      severity: 'CRITICAL'
+      # THIS STEP IS NOW CORRECTLY INDENTED
+      - name: Scan Docker image with Trivy
+        uses: aquasecurity/trivy-action@master
+        with:
+          image-ref: ${{ steps.build-image.outputs.image }}
+          format: 'table'
+          exit-code: '1'
+          ignore-unfixed: true
+          vuln-type: 'os,library'
+          severity: 'CRITICAL'
 
   # Job 3: Deploy to EKS
   deploy-to-eks:
@@ -86,12 +85,12 @@ jobs:
       - name: Configure kubectl for EKS
         run: aws eks update-kubeconfig --name ${{ env.EKS_CLUSTER_NAME }} --region ${{ env.AWS_REGION }}
 
-  - name: Deploy to Kubernetes
-    run: |
-      # The debug steps are no longer needed
-      kubectl apply -f k8s/sealed-secret.yaml
-      
-      export IMAGE_URI="${{ needs.build-and-push-image.outputs.image_uri }}"
-      sed -i "s|prerna307/devsecops-app:latest|$IMAGE_URI|" k8s/deployment.yaml
-      
-      kubectl apply -f k8s/deployment.yaml
+      # THIS STEP IS NOW CORRECTLY INDENTED
+      - name: Deploy to Kubernetes
+        run: |
+          kubectl apply -f kbs/sealed-secret.yaml
+          
+          export IMAGE_URI="${{ needs.build-and-push-image.outputs.image_uri }}"
+          sed -i "s|prerna307/devsecops-app:latest|$IMAGE_URI|" k8s/deployment.yaml
+          
+          kubectl apply -f k8s/deployment.yaml
