--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,14 +28,14 @@ jobs:
           working_directory: infra
           soft_fail: true
 
-  # Job 2: Build, Scan, and Push Docker Image to Docker Hub
+  # Job 2: Build, Scan, and Push using OFFICIAL DOCKER ACTIONS
   build-and-push-image:
     name: Build, Scan & Push Docker Image
     runs-on: ubuntu-latest
     needs: tfsec-scan
     if: github.event_name == 'push' && github.ref == 'refs/heads/main'
     outputs:
-      image_uri: ${{ steps.build-image.outputs.image }}
+      image_with_tag: ${{ steps.build-and-push.outputs.image_with_tag }}
     steps:
       - name: Checkout Code
         uses: actions/checkout@v3
@@ -46,19 +46,35 @@ jobs:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-      - name: Build and push Docker image
-        id: build-image
-        run: |
-          IMAGE_TAG=${{ github.sha }}
-          docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/${{ env.DOCKER_REPO }}:$IMAGE_TAG .
-          docker push ${{ secrets.DOCKERHUB_USERNAME }}/${{ env.DOCKER_REPO }}:$IMAGE_TAG
-          echo "image=${{ secrets.DOCKERHUB_USERNAME }}/${{ env.DOCKER_REPO }}:$IMAGE_TAG" >> $GITHUB_OUTPUT
+      # --- THIS IS THE CRITICAL FIX ---
+      # This step uses an official action to generate metadata like tags.
+      - name: Docker meta
+        id: meta
+        uses: docker/metadata-action@v5
+        with:
+          images: ${{ secrets.DOCKERHUB_USERNAME }}/${{ env.DOCKER_REPO }}
+          tags: |
+            type=sha,prefix=,format=short
 
-      # THIS STEP IS NOW CORRECTLY INDENTED
+      # This is the new, official, robust build-and-push action.
+      # It handles outputs correctly.
+      - name: Build and push Docker image
+        id: build-and-push
+        uses: docker/build-push-action@v5
+        with:
+          context: .
+          push: true
+          tags: ${{ steps.meta.outputs.tags }}
+          labels: ${{ steps.meta.outputs.labels }}
+
+      - name: Set Image Output
+        id: set-image-output
+        run: echo "image_with_tag=${{ steps.meta.outputs.tags }}" >> $GITHUB_OUTPUT
+
       - name: Scan Docker image with Trivy
         uses: aquasecurity/trivy-action@master
         with:
-          image-ref: ${{ steps.build-image.outputs.image }}
+          image-ref: ${{ steps.meta.outputs.tags }}
           format: 'table'
           exit-code: '1'
           ignore-unfixed: true
@@ -85,12 +101,14 @@ jobs:
       - name: Configure kubectl for EKS
         run: aws eks update-kubeconfig --name ${{ env.EKS_CLUSTER_NAME }} --region ${{ env.AWS_REGION }}
 
-      # THIS STEP IS NOW CORRECTLY INDENTED
       - name: Deploy to Kubernetes
         run: |
           kubectl apply -f k8s/sealed-secret.yaml
           
-          export IMAGE_URI="${{ needs.build-and-push-image.outputs.image_uri }}"
+          # This will now receive the correct output from the build job.
+          export IMAGE_URI="${{ needs.build-and-push-image.outputs.image_with_tag }}"
+          
+          # The sed command will now work.
           sed -i "s|prerna307/devsecops-app:latest|$IMAGE_URI|" k8s/deployment.yaml
           
           kubectl apply -f k8s/deployment.yaml
